--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="{{url_for('static',filename='search.js')}}"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <title>
     Quasy songs
 </title>
 </head>
     <body>
+
         <div>Microblog: <a href="/index">Home</a></div>
+        <div> <a href="{{url_for('searchsong')}}" >Search for songs  </a> </div>
         <hr>
         {% block content %}{% endblock %}
     </body>
