--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,12 +32,9 @@
 </head>
     <body>
 
-        <div>Microblog: <a href="{{url_for('searchsong')}}">Home</a></div>
-        <div> <a href="{{url_for('searchsong')}}" >Search for songs  </a> </div>
+        <div>Microblog: <a href="{{url_for('searchsong')}}">Search Song</a> <a href="{{url_for('getlist')}}" >djspace  </a> </div>
 
-        {%if songs!=[]%}
-        <div>Selected songs = {{songs}}</div>
-        {%endif%}
+        
         <hr>
          {% with messages = get_flashed_messages() %}
         {% if messages %}
