--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="{{url_for('static',filename='css/materialize.css')}}">     
+      <link type="text/css" rel="stylesheet"href="{{url_for('static',filename='css/materialize.min.css')}}"  media="screen,projection"/>
+      
+      <script  src="{{url_for('static',filename='js/materialize.js')}}"></script>
+      <script type="text/css"  src="{{url_for('static',filename='js/materialize.min.js')}}"></script>
+
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="{{url_for('static',filename='search.js')}}"></script>
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         function preparebutton(){
-    $(":button").click(function(){
+    $(":input").click(function(){
        addSong(this.id);
       });
   }
@@ -32,10 +39,20 @@
 </head>
     <body>
 
-        <div>Microblog: <a href="{{url_for('searchsong')}}">Search Song</a> <a href="{{url_for('getlist')}}" >djspace  </a> </div>
-
-        
-        <hr>
+        <!--<div>Microblog: <a href="{{url_for('searchsong')}}">Search Song</a> <a href="{{url_for('getlist')}}" >djspace  </a> </div>
+        -->
+        <nav>
+            <div class="nav-wrapper">
+              <a href="#" class="brand-logo">QUASYAPP</a>
+              <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <!--<li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">JavaScript</a></li>-->
+              </ul>
+            </div>
+          </nav>
+        <div class="container">
+            
          {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
@@ -46,5 +63,6 @@
         {% endif %}
         {% endwith %}
         {% block content %}{% endblock %}
+      </div>
     </body>
 </html>
