--- a/app/templates/forms_login.html
+++ b/app/templates/forms_login.html
@@ -1,24 +1,43 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="row">
+<div class="col s0"></div>
+<div class="col s6">
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
+
+        
+        <p><div class="input-field inline">
+            
             {{ form.username(size=32) }}<br>
             {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
+            {{ form.username.label }}<br>
+            </div>
         </p>
         <p>
-            {{ form.password.label }}<br>
+            <div class="input-field inline">
+            
             {{ form.password(size=32) }}<br>
             {% for error in form.password.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
+            {{ form.password.label }}<br>
+        </div>
         </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+        <label>
+                {{ form.remember_me(checked="checked") }}  <span>
+                    {{ form.remember_me.label() }} </span>
+        </label>
+        <p><button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <i class="material-icons right">send</i>
+              </button>
+                    </p>
+        
     </form>
+</div>
+</div>
 {% endblock %}
