aggiustata la resize

--- a/app/templates/dj.html
+++ b/app/templates/dj.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col s8">
+    <div class="col s12 m8">
         <script src="{{url_for('static',filename='dj.js')}}"></script>
         <script>
          document.addEventListener('DOMContentLoaded', function() {
@@ -34,7 +34,7 @@
             </ol>
         </div>
     </div>
-    <div class="col s7">
+    <div class="col s12 m8">
         
 
 
