--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="{{url_for('static',filename='css/materialize.css')}}">     
       <link type="text/css" rel="stylesheet"href="{{url_for('static',filename='css/materialize.min.css')}}"  media="screen,projection"/>
-      
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <script  src="{{url_for('static',filename='js/materialize.js')}}"></script>
       <script type="text/css"  src="{{url_for('static',filename='js/materialize.min.js')}}"></script>
 
@@ -42,7 +42,7 @@
         <!--<div>Microblog: <a href="{{url_for('searchsong')}}">Search Song</a> <a href="{{url_for('getlist')}}" >djspace  </a> </div>
         -->
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper col m8 s12">
               <a href="#" class="brand-logo">QUASYAPP</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <!--<li><a href="sass.html">Sass</a></li>
