--- a/app/templates/forms_login.html
+++ b/app/templates/forms_login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
 <div class="col s0"></div>
-<div class="col s6">
+<div class="col s12 m6">
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
